--- a/style.css
+++ b/style.css
@@ -33,3 +33,49 @@ body {
   position: relative;
   width: 100%;
 }
+.container .input-box input {
+  position: relative;
+  width: 100%;
+  padding: 10px;
+  font-size: 1.1em;
+  background-color: #222;
+  color: #fff;
+  border: none;
+  outline: none;
+}
+.container .strengtmeter {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 3px;
+  background-color: #222;
+}
+.container .strengtmeter::before {
+  content: '';
+  position: absolute;
+  width: 0%;
+  height: 100%;
+  transition: 0.5s;
+  background-color: #f00;
+}
+.show {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 60px;
+  height: 100%;
+  background-color: #333;
+  border: 6px solid #222;
+  cursor: pointer;
+}
+.show::before {
+  content: 'Show';
+  font-size: 0.6em;
+  letter-spacing: 0.15em;
+  text-transform: uppercase;
+  color: #fff;
+}
