--- a/style.css
+++ b/style.css
@@ -59,6 +59,17 @@ body {
   transition: 0.5s;
   background-color: #f00;
 }
+.container.weak .strengtmeter::before {
+  width: 25%;
+}
+.container.medium .strengtmeter::before {
+  width: 50%;
+  background-color: #ffa500;
+}
+.container.strong .strengtmeter::before {
+  width: 100%;
+  background-color: #0f0;
+}
 .show {
   display: flex;
   justify-content: center;
